<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@+id/nav_navigation">

    <fragment
        android:id="@+id/nav_navigation"
        android:name="com.example.weathernav.ui.navigation.NavigationFragment"
        android:label="@string/menu_title_navigation"
        tools:layout="@layout/fragment_navigation"
        />

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.weathernav.ui.weather.WeatherFragment"
        android:label="@string/menu_title_weather"
        tools:layout="@layout/fragment_weather"
        />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.weathernav.ui.history.HistoryFragment"
        android:label="@string/menu_title_history"
        tools:layout="@layout/fragment_history"
        />

</navigation>